--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="vi">
 <head>
+    <script src="https://messenger.svc.chative.io/static/v1.0/channels/s51de13cb-e497-4d27-8048-72589981d618/messenger.js?mode=livechat" defer="defer"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Thiết Kế Website Theo Yêu Cầu — Giá HSSV 60k | Thường 100k | Cao 250k | VIP 500k</title>
@@ -731,3 +732,4 @@
     </script>
 </body>
 </html>
+
