--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                 <a href="#quy-trinh">Quy trình</a>
                 <a href="#gioithiu">Giới thiệu</a>
                 <a href="#lien-he" class="btn" style="padding:8px 12px">Liên hệ</a>
+                <a href="https://dangky14.netlify.app/" class="btn" style="padding:8px 12px">Đăng ký/đăng nhập.</a>
             </nav>
 
             <div class="mobile-actions" style="display:none">
@@ -732,4 +733,5 @@
     </script>
 </body>
 </html>
+
 
