--- a/index.html
+++ b/index.html
@@ -350,6 +350,13 @@
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" style="flex:0 0 16px"><path d="M12 2C6.48 2 2 6.03 2 10.5c0 2.9 1.81 5.48 4.58 6.98L6 22l4.25-2.36c.9.22 1.83.34 2.75.34 5.52 0 10-4.03 10-8.5S17.52 2 12 2z" fill="#2e89ff"/><path d="M7.5 11.2L11 8.5l3.5 2.7-3.5 2.8L7.5 11.2z" fill="#fff"/></svg>
                             Chat TLGB TEAM
                         </a>
+                     <a class="btn outline" href="https://www.facebook.com/gia.bao.tranle.2025?locale=vi_VN" target="_blank" aria-label="Truy cập Facebook" style="display:inline-flex;align-items:center;gap:8px;padding:8px 12px">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" style="flex:0 0 16px">
+                    <path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.85 7.94 9.8v-6.93H7.9v-2.87h2.04V9.8c0-2.02 1.2-3.14 3.04-3.14.88 0 1.8.16 1.8.16v1.98h-1.01c-.99 0-1.3.62-1.3 1.25v1.51h2.21l-.35 2.87h-1.86v6.93C18.56 20.85 22 16.84 22 12z" fill="#1877F2"/>
+                </svg>
+                Facebook
+            </a>
+
                     </div>
 
                     <section class="check-coupon reveal" id="checkCoupon" aria-live="polite" style="margin-top:12px">
@@ -732,6 +739,7 @@
     </script>
 </body>
 </html>
+
 
 
 
