--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 <a href="#bang-gia">Bảng giá</a>
                 <a href="#quy-trinh">Quy trình</a>
                 <a href="#gioithiu">Giới thiệu</a>
+                <a href="https://vtv24h.netlify.app/">VTV của TLGB</a>
                 <a href="#lien-he" class="btn" style="padding:8px 12px">Liên hệ</a>
             </nav>
 
@@ -739,6 +740,7 @@
     </script>
 </body>
 </html>
+
 
 
 
