--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <a href="#quy-trinh">Quy trình</a>
                 <a href="#gioithiu">Giới thiệu</a>
                 <a href="https://vtv24h.netlify.app/">VTV của TLGB</a>
-                <a href="#lien-he" class="btn" style="padding:8px 12px">Liên hệ</a>
+                <a href="#lienhe" class="btn" style="padding:8px 12px">Liên hệ</a>
             </nav>
 
             <div class="mobile-actions" style="display:none">
@@ -239,7 +239,7 @@
                         <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#00e0a4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Responsive di động</li>
                         <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#00e0a4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Tối ưu tốc độ & SEO cơ bản</li>
                     </ul>
-                    <div class="cta"><a href="#lien-he" class="btn" aria-label="Đặt gói HSSV 60k">Đặt làm ngay</a></div>
+                    <div class="cta"><a href="https://forms.gle/aZPQW8nKUWjVHxKp7" class="btn" aria-label="Đặt gói HSSV 60k">Đặt làm ngay</a></div>
                 </article>
 
                 <article class="plan popular">
@@ -255,7 +255,7 @@
                         <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#00e0a4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Form liên hệ</li>
                         <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#00e0a4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Tích hợp mạng xã hội</li>
                     </ul>
-                    <div class="cta"><a href="#lien-he" class="btn" aria-label="Đặt gói Thường 100k">Đặt làm ngay</a></div>
+                    <div class="cta"><a href=https://forms.gle/aZPQW8nKUWjVHxKp7" class="btn" aria-label="Đặt gói Thường 100k">Đặt làm ngay</a></div>
                 </article>
 
                 <article class="plan">
@@ -271,7 +271,7 @@
                         <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#00e0a4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Tùy chỉnh giao diện sâu</li>
                         <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#00e0a4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Hỗ trợ cài hosting cơ bản</li>
                     </ul>
-                    <div class="cta"><a href="#lien-he" class="btn" aria-label="Đặt gói Cao 250k">Đặt làm ngay</a></div>
+                    <div class="cta"><a href="https://forms.gle/aZPQW8nKUWjVHxKp7" class="btn" aria-label="Đặt gói Cao 250k">Đặt làm ngay</a></div>
                 </article>
 
                 <article class="plan">
@@ -287,7 +287,7 @@
                         <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#00e0a4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Tối ưu SEO mở rộng + tư vấn nội dung</li>
                         <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M20 6L9 17l-5-5" stroke="#00e0a4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Bảo hành & chỉnh sửa 7 ngày</li>
                     </ul>
-                    <div class="cta"><a href="#lien-he" class="btn" aria-label="Đặt gói VIP 500k">Đặt làm ngay</a></div>
+                    <div class="cta"><a href="https://forms.gle/aZPQW8nKUWjVHxKp7" class="btn" aria-label="Đặt gói VIP 500k">Đặt làm ngay</a></div>
                 </article>
             </div>
         </section>
@@ -302,38 +302,41 @@
                 <div class="step"><span class="num">4</span><h3 style="margin:8px 0 6px">Bàn giao & hướng dẫn</h3><p style="color:var(--muted);margin:0">Giao file + hướng dẫn; hỗ trợ cài đặt cơ bản.</p></div>
             </div>
         </section>
+<!-- Mẫu -->
+<div style="display:flex; gap:16px; justify-content:center; flex-wrap:wrap;">
 
-        <!-- MẪU -->
-        <section class="section" id="mau">
-            <h2 class="section-title">Mẫu giao diện (demo)</h2>
-            <div class="grid" style="grid-template-columns:repeat(3,1fr);gap:14px;margin-top:12px">
-                <div style="aspect-ratio:16/10;border-radius:12px;background:linear-gradient(135deg,#253656,#15233a);border:1px solid #2a3b5c;display:grid;place-items:center;color:#89a0c2">Mẫu #1</div>
-                <div style="aspect-ratio:16/10;border-radius:12px;background:linear-gradient(135deg,#2a3a55,#122230);border:1px solid #24364f;display:grid;place-items:center;color:#89a0c2">Mẫu #2</div>
-                <div style="aspect-ratio:16/10;border-radius:12px;background:linear-gradient(135deg,#24324a,#0f1a2a);border:1px solid #1e3148;display:grid;place-items:center;color:#89a0c2">Mẫu #3</div>
+    <a href="https://vtv24h.netlify.app/" target="_blank" style="text-decoration:none">
+        <div style="width:250px; aspect-ratio:16/10; border-radius:12px; background:linear-gradient(135deg,#253656,#15233a); border:1px solid #2a3b5c; display:grid; place-items:center; color:#89a0c2; cursor:pointer;">
+            Mẫu #1
+        </div>
+    </a>
+
+    <a href="https://htvtlgb.netlify.app/" target="_blank" style="text-decoration:none">
+        <div style="width:250px; aspect-ratio:16/10; border-radius:12px; background:linear-gradient(135deg,#2a3a55,#122230); border:1px solid #24364f; display:grid; place-items:center; color:#89a0c2; cursor:pointer;">
+            Mẫu #2
+        </div>
+    </a>
+
+    <a href="https://doanket-quangngai.netlify.app/" target="_blank" style="text-decoration:none">
+        <div style="width:250px; aspect-ratio:16/10; border-radius:12px; background:linear-gradient(135deg,#24324a,#0f1a2a); border:1px solid #1e3148; display:grid; place-items:center; color:#89a0c2; cursor:pointer;">
+            Mẫu #3
+        </div>
+    </a>
+
+</div>
+
+<p style="text-align:center; color:#555; font-family:Arial, sans-serif; margin-top:12px;">
+    Lưu ý: 3 mẫu web này được thiết kế bởi <strong>Gia Bảo và TLGB TEAM</strong>
+</p>
+
+
+
             </div>
         </section>
 
-        <!-- LIÊN HỆ -->
-        <section class="section" id="lien-he">
-            <h2 class="section-title">Liên hệ đặt làm</h2>
-
-            <div class="contact-card" style="margin-top:12px">
-                <form id="contactForm" onsubmit="return handleFormSubmit(event)">
-                    <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px">
-                        <div>
-                            <label for="name" style="display:block;font-weight:700;margin-bottom:6px">Tên</label>
-                            <input id="name" name="name" required placeholder="Ví dụ: Bảo" />
-                        </div>
-                        <div>
-                            <label for="package" style="display:block;font-weight:700;margin-bottom:6px">Chọn gói</label>
-                            <select id="package" name="package">
-                                <option>HSSV — 60k</option>
-                                <option>Thường — 100k</option>
-                                <option>Cao — 250k</option>
-                                <option>VIP — 500k</option>
-                            </select>
                         </div>
                     </div>
+                            <section class="section" id="lienhe"></section>
                     <div>
                         <label for="desc" style="display:block;font-weight:700;margin-bottom:6px">Mô tả yêu cầu</label>
                         <textarea id="desc" name="desc" placeholder="Màu tím, có phần giới thiệu + bảng giá + liên hệ, tối ưu điện thoại…"></textarea>
@@ -700,32 +703,7 @@
 
     initCouponState();
 
-    function handleFormSubmit(e) {
-        e.preventDefault();
-        const name = document.getElementById('name').value.trim();
-        const pack = document.getElementById('package').value;
-        const desc = document.getElementById('desc').value.trim();
-        if (!name) { formMsg.textContent = "Vui lòng nhập tên!"; return false; }
-        const msg = `[ĐẶT LÀM WEB]\nTên: ${name}\nGói: ${pack}\nMô tả: ${desc}`;
-        formMsg.textContent = "✅ Yêu cầu đã được gửi! Vui lòng nhắn Zalo hoặc chat để xác nhận.";
-        console.info(msg);
-        return false;
-    }
-    window.handleFormSubmit = handleFormSubmit;
 
-    (function initZalo(){
-        const z = document.getElementById('zaloBtn');
-        if(!z) return;
-        z.addEventListener('click', (ev) => {
-            ev.preventDefault();
-            const name = document.getElementById('name').value.trim();
-            const pack = document.getElementById('package').value;
-            const desc = document.getElementById('desc').value.trim();
-            const msg = encodeURIComponent(`[ĐẶT LÀM WEB]\nTên: ${name}\nGói: ${pack}\nMô tả: ${desc}`);
-            const ZALO_PHONE = '0348707829';
-            window.open('https://zalo.me/' + ZALO_PHONE + '?message=' + msg, '_blank', 'noopener');
-        });
-    })();
 
     window.webcraftCoupons = {
         isUsed: isUsedCode,
@@ -740,8 +718,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
