--- a/index.html
+++ b/index.html
@@ -322,6 +322,12 @@
             Mẫu #3
         </div>
     </a>
+    
+    <a href="https://baovn.netlify.app/?fbclid=IwQ0xDSwMUlzZleHRuA2FlbQIxMQABHpXCuEltphHXJyHAUInaQHozLC0b6zTLxscsnjNSrytMyZVkaxvyNR44Jq7E_aem_ogXRLiwnUjYUkD_o1A7zlg" target="_blank" style="text-decoration:none">
+        <div style="width:250px; aspect-ratio:16/10; border-radius:12px; background:linear-gradient(135deg,#24324a,#0f1a2a); border:1px solid #1e3148; display:grid; place-items:center; color:#89a0c2; cursor:pointer;">
+            Mẫu #4
+        </div>
+    </a>
 
 </div>
 
@@ -718,3 +724,4 @@
     </script>
 </body>
 </html>
+
