--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:6px">
                         <button class="btn" type="submit">Gửi yêu cầu qua chat</button>
 
-                        <a class="btn outline" href="#" id="zaloBtn" aria-label="Nhắn Zalo" style="display:inline-flex;align-items:center;gap:8px;padding:8px 12px">
+                        <a class="btn outline" href="https://zalo.me/0348707829" id="zaloBtn" aria-label="Nhắn Zalo" style="display:inline-flex;align-items:center;gap:8px;padding:8px 12px">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" style="flex:0 0 16px"><path d="M12 2C6.48 2 2 6.03 2 10.5c0 2.9 1.81 5.48 4.58 6.98L6 22l4.25-2.36c.9.22 1.83.34 2.75.34 5.52 0 10-4.03 10-8.5S17.52 2 12 2z" fill="#00a3ff"/><path d="M8 12.5l4.5-3 3 3-4.5 3z" fill="#fff" opacity="0.95"/></svg>
                             Nhắn Zalo
                         </a>
@@ -724,4 +724,5 @@
     </script>
 </body>
 </html>
+
 
